# a2a-samples

./: .editorconfig  .gitignore  .prettierrc  .ruff.toml  CONTRIBUTING.md  README.md  format.sh  noxfile.py  pyproject.toml  requirements-dev.txt
aiwithbrandon_example/a2a_friend_scheduling/host_agent_adk/: main.py  pyproject.toml
aiwithbrandon_example/a2a_friend_scheduling/host_agent_adk/host/: __init__.py  agent.py  pickleball_tools.py  remote_agent_connection.py
aiwithbrandon_example/a2a_friend_scheduling/kaitlynn_agent_langgraph/: main.py  pyproject.toml
aiwithbrandon_example/a2a_friend_scheduling/kaitlynn_agent_langgraph/app/: __main__.py  agent.py  agent_executor.py
aiwithbrandon_example/a2a_friend_scheduling/nate_agent_crewai/: __main__.py  agent.py  main.py  pyproject.toml
aiwithbrandon_example/a2a_simple/: README.md  __main__.py  agent_executor.py  pyproject.toml  test_client.py
demo/ui/: Containerfile  README.md  main.py  pyproject.toml
demo/ui/components/: agent_list.py  api_key_dialog.py  async_poller.js  async_poller.py  chat_bubble.py  conversation.py  conversation_list.py  dialog.py  event_viewer.py  form_render.py  header.py  page_scaffold.py  poller.py  side_nav.py  task_card.py
demo/ui/pages/: agent_list.py  conversation.py  event_list.py  home.py  settings.py  task_list.py
demo/ui/service/: types.py
demo/ui/service/client/: client.py
demo/ui/service/server/: adk_host_manager.py  application_manager.py  in_memory_manager.py  server.py  test_image.py
demo/ui/state/: agent_state.py  host_agent_service.py  state.py
demo/ui/styles/: styles.py
demo/ui/tests/: test_adk_host_manager.py
demo/ui/utils/: agent_card.py
examples/google_adk/birthday_planner/: README.md  __main__.py  adk_agent_executor.py  pyproject.toml
examples/google_adk/calendar_agent/: README.md  __main__.py  adk_agent.py  adk_agent_executor.py  pyproject.toml
examples/langgraph/: README.md  __main__.py  agent.py  agent_executor.py  agent_proxy.py  helpers.py  main.py  pyproject.toml  test_client.py
extensions/agp/: agp_run.py  pyproject.toml  spec.md
extensions/agp/src/agp_protocol/: __init__.py  agp_delegation_models.py
extensions/agp/tests/: test_agp.py
itk/agents/python/v10/: build_protos.sh  main.py  pyproject.toml
notebooks/trending_topics/: main.py  pyproject.toml
samples/a2a-adk-app/: README.md  main.py  pyproject.toml
samples/a2a-adk-app/airbnb_agent/: .env.example  __main__.py  agent.py  agent_executor.py  test_client.py
samples/a2a-adk-app/host_agent/adk_agent/: README.md  agent.py
samples/a2a-adk-app/weather_agent/: README.md  __main__.py  test_client.py
samples/python/: .gitignore  README.md  pyproject.toml  refactor_camel_to_snake.sh  requirements.txt
samples/python/agents/: README.md
samples/python/agents/a2a-mcp-without-framework/: .ruff.toml  README.md  pyproject.toml  response.xml
samples/python/agents/a2a_mcp/: README.md  pyproject.toml  run.sh  travel_agency.db
samples/python/agents/a2a_telemetry/: README.md  __main__.py  agent_executor.py  docker-compose.yaml  pyproject.toml
samples/python/agents/adk_cloud_run/: Dockerfile  README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml
samples/python/agents/adk_currency_agent/: README.md  agent_eval.ipynb  pyproject.toml
samples/python/agents/adk_expense_reimbursement/: README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml
samples/python/agents/adk_facts/: .dockerignore  Dockerfile  README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml  requirements.txt
samples/python/agents/adk_skills_agent/: README.md  pyproject.toml  test.http
samples/python/agents/ag2/: Containerfile  README.md  __init__.py  __main__.py  a2a_python_reviewer.py  agent.py  agent_executor.py  cli_codegen_a2a_client.py  fastapi_codegen_a2a_client.py  pyproject.toml  task_manager.py
samples/python/agents/airbnb_planner_multiagent/: README.md  pyproject.toml
samples/python/agents/analytics/: README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml  utils.py
samples/python/agents/any_agent_adversarial_multiagent/: .gitignore  README.md  __main__.py  prompts.py  pyproject.toml
samples/python/agents/autogen/: README.md  Readme.md  __init__.py  __main__.py  agent.py  agent_executor.py  requirements.txt  task_manager.py
samples/python/agents/azureaifoundry_sdk/: README.md
samples/python/agents/beeai-chat/: Dockerfile  README.md  __main__.py  pyproject.toml
samples/python/agents/content_planner/: README.md  __main__.py  agent_executor.py  content_planner_agent.py  pyproject.toml  requirements.txt
samples/python/agents/crewai/: Containerfile  README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml  task_manager.py
samples/python/agents/dice_agent_grpc/: README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml  test_client.py
samples/python/agents/dice_agent_rest/: __main__.py  agent.py  agent_executor.py  pyproject.toml  test_client.py
samples/python/agents/github-agent/: .gitignore  README.md  __main__.py  github_toolset.py  openai_agent.py  openai_agent_executor.py  pyproject.toml
samples/python/agents/google_adk/: README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml  task_manager.py
samples/python/agents/headless_agent_auth/: .env.example  README.md  __main__.py  agent.py  agent_executor.py  api.py  oauth2_middleware.py  pyproject.toml  test_client.py
samples/python/agents/helloworld/: Containerfile  README.md  __main__.py  agent_executor.py  pyproject.toml  test_client.py
samples/python/agents/langgraph/: Containerfile  README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml  task_manager.py
samples/python/agents/llama_index_file_chat/: README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml  task_manager.py
samples/python/agents/marvin/: README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml  task_manager.py
samples/python/agents/mindsdb/: README.md  __main__.py  (+4 more)
samples/python/common/: readme.md  types.py
samples/python/hosts/: README.md
(+536 files in other folders)
