[project]
name = "a2a-samples-workspace"
version = "0.1.0"
description = "Agent2Agent samples"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "samples/python/agents/crewai",
    "samples/python/agents/adk_expense_reimbursement",
    "samples/python/agents/marvin",
    "samples/python/hosts/cli",
    "samples/python/hosts/extended_agent_card_cli",
    "samples/python/hosts/multiagent",
    "samples/python/agents/airbnb_planner_multiagent",
    "samples/python/agents/llama_index_file_chat",
    "samples/python/agents/semantickernel",
    "samples/python/agents/mindsdb",
    "samples/python/agents/extended_agent_card_adk",
    "samples/python/agents/veo_video_gen",
    "samples/python/agents/dice_agent_grpc",
    "samples/python/agents/dice_agent_rest",
    "samples/python/agents/ag2",
    "samples/python/extensions/timestamp",
    "demo/ui",
]
