[project]
name = "host-agent-adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.2.16",
    "click>=8.2.1",
    "google-adk>=1.2.1",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.3",
]
