[project]
name = "kaitlynn-agent-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.2.16",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "langchain-core>=0.3.71",
    "langchain-google-genai>=2.1.8",
    "langgraph>=0.5.4",
    "protobuf==5.29.5",
    "pydantic>=2.11.5",
    "uvicorn>=0.35.0",
]
