[project]
name = "itk-python-v10-agent"
version = "0.1.0"
description = "ITK Python v1.0 Agent"
dependencies = [
    "a2a-sdk[sqlite,grpc] @ git+https://github.com/a2aproject/a2a-python.git@1.0-dev",
    "fastapi",
    "uvicorn",
    "grpcio",
    "grpcio-tools",
    "protobuf",
    "sse-starlette",
    "httpx-sse",
    "packaging",
]

[tool.uv]
package = false
