[project]
name = "a2a-samples-mcp"
version = "0.1.0"
description = "MCP agent using A2A and AG2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ag2>=0.9.3",
    "ag2[mcp, openai]>=0.9.3",
    "google-genai>=1.10.0",
    "a2a-samples",
]

[tool.uv.sources]
a2a-samples = { workspace = true }