[project]
name = "a2a-samples-analytics"
version = "0.1.0"
description = "Generate charts from CSV-like data passed in"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[tools]>=0.95.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "a2a-sdk>=0.3.0",
    "sse-starlette>=2.3.6",
    "starlette>=0.46.2",
]
